G2P-4658  Major upgrades- Keycloak, UI, API.
